<resources>
    <string name="app_name">Calculadora RCV</string>
    <string name="txtEmail">Correo Electrónico</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtRegistrar">Crear Cuenta</string>
    <string name="title_activity_main">Calculadora RCV</string>
    <string name="navigationEstado">Estado</string>
    <string name="navigationCalcular">Calcular RCV</string>
    <string name="navigationPerfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtValor">Valor</string>
    <string name="acercaDe">Acerca de...</string>
    <string name="txtScore">Score:</string>
    <string name="config">Configuración</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="lblFechaNacimiento">Fecha de Nacimiento</string>
    <string name="txtUltimoAcceso">Último Acceso</string>
    <string name="txtHistorial">Historial de Cálculos</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="btnEditar">Editar perfil</string>
    <string name="txtFase">Datos del Paciente</string>
    <string name="TAS">Tensión Arterial Sistólica</string>
    <string name="TAD">Tensión Arterial Diastólica</string>
    <string name="btnCalcular">Calcular</string>
    <string name="Tabaquismo">Tabaquismo</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="antecedentesPersonales">Historial Clínico</string>
    <string name="txtAltura">Altura (cm)</string>
    <string name="txtPeso">Peso (kg)</string>
    <string name="Fisica">Actividad Física</string>
    <string name="HDL">Colesterol HDL</string>
    <string name="LDL">Colesterol LDL</string>
    <string name="Diabetes">Diabetes</string>
    <string name="Hipertensión">Hipertensión</string>
    <string name="Hipertrofia">Hipertrofia</string>
    <string name="txtCalcular">Calcular</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="framingham_risk_score">Framingham Risk Score</string>
    <string name="autores">Autores</string>
    <string name="bibliograf_a">Bibliografía</string>
    <string name="txtAutor">Sergio González Velázquez</string>
    <string name="infoAutor">Se trata de una aplicación con fines académicos que ha sido desarrollada como parte de proyecto de laboratorio en la asignatura Gestión de Sistemas de Información de la Escuela Superior Informática de Ciudad Real durante el curso 2018/2019.</string>
    <string name="txtCorreo">sergio.gonzalez29@alu.uclm.es</string>
    <string name="txtFragmigham">Las puntuaciones calculadas por esta aplicación se basan en la Puntuación de Riesgo Cardiovascular de Framingham, una estimación que hace referencia a la probabilidad que tiene una persona de sufrir una ECV (enfermedad cardiovascular) en un período de 10 años</string>
    <string name="nota">Nota:</string>
    <string name="notaFragm">Esta aplicación se presenta como una gúia. Las decisiones médicas y otras no deben basarse en los resultados de esta calculadora.</string>
    <string name="definicionRiesgo">Definición del Riesgo Cardiovascular</string>
    <string name="riesgoAlto">Tienen riesgo cardiovascular alto los pacientes que reúnen una puntuación en la escala de Framigham de 22 o superior, lo que supone una probabilidad de padecer un evento cardiovascular en los próximos 10 años superior al 20%. También consideramos en riesgo alto a aquellos pacientes que ya han sufrido un episodio cardiovascular o presentan diabetes.</string>
    <string name="riesgoMedio">Se califican de riesgo cardiovascular moderado aquellos pacientes con algún factor de riesgo (tabaquismo, hipertensión o hiperlipemia) y una putuación inferior a 22, consiguiente una probabilidad de un eposidio isquémico inferior al 20% en los próximos 10 años.</string>
    <string name="riesgoBajo">Son de riesgo cardiovascular bajo los pacientes, idependientemente de la edad y el sexo, sin factores de riesgo conocidos</string>
    <string name="riesgoInfo">El cálculo de valoración a la que nos referimos se reproduce en las conocidas como Tablas de Framigham. En ellas, se diferencia el cálculo por sexo y por edad como factores de riesgo no modificables y, adicionalmente, consideran las cifras de presión arterial y de colesterol, el estado de fumador o no y, la presencia de diabetes. </string>
    <string name="text_not_member">¿Aún no tienes cuenta? REGÍSTRATE</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="text_member">¿Tienes cuenta? Inicia Sesión</string>
    <string name="txtApellido">Primer Apellido</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="registro_correcto">Usuario registrado correctamente</string>
    <string name="login_correcto">Inicio de sesión realizado correctamente</string>
    <string name="factorTabaco">Tabaquismo como factor de riesgo</string>
    <string name="efectoTabaco">El efecto del tabaquismo en la enfermedad coronaria está claramente demostrado, además de estar relacionado con la aparición de otras enfermedades malignas y no malignas en los sujetos que mantienen este hábito.\n \n Esto explica una de las conclusiones más importantes del estudio Framingham sobre los factores de riesgo cardiovascular, en el que se constata que por cada diez cigarrillos diarios que se fuman la mortalidad por enfermedad cardiovascular aumenta un 18% en los hombres y un 31% en las mujeres.</string>
    <string name="consejosFumar">Consejos para dejar de fumar</string>
    <string name="dejarFumar">Dejar de fumar puede ser un proceso difícil que toma tiempo. No obstante, mantenerse alejado del tabaco es la parte que toma más tiempo y la más importante del proceso. Cada día debe tomar la decisión de no fumar hoy.\n \n Cada día que pasa sin que usted fume es una pequeña victoria, y todo esto se añade a una victoria enorme con el transcurso del tiempo.\n \n \n 1)El primer paso es poner una fecha. “Esto es fundamental ya que el tabaco crea una dependencia física (por la nicotina), social (se suele fumar con los amigos, en los bares, etc.) y psicológica (dejar de fumar podría provocar nerviosismo, insomnio, estreñimiento, entre otros)”, añade. El Grupo de Abordaje al Tabaquismo de la Sociedad Española de Medicina Familiar y Comunitaria (semFYC), indica que es preferible poner ese plazo en dos semanas.\n \n 2)Díselo a tu familia y amigos. Es importante buscar el apoyo de las personas del entorno para conseguir llegar a la meta. En el caso de que una persona quiera dejar de fumar y su pareja sea fumador, Caramelles recomienda hacer el intento a la vez para tener más probabilidades de éxito.\n \n 3) Quitar todo lo relacionado con fumar. Antes de dejar de fumar hay que retirar del entorno todo lo que esté relacionado con el tabaco: cigarros, ceniceros, mecheros, etc.\n \n 4) Analizar los intentos previos. “Es normal que al dejar de fumar haya recaídas y podemos aprender de ellas”, explica. “El exfumador debe repetir lo que le funcionó en el intento anterior y evitar lo que le perjudicó. En este sentido aconseja analizar la relación que tiene la persona con el tabaco. “Puede pensar, por ejemplo, cuál es el cigarrillo que le cuesta más y buscar sustitutos. Si es después de comer puede salir a dar un paseo, lavarse los dientes o beber agua”. Además, recomienda evitar o limitar el consumo de alcohol las primeras semanas.\n \n 5) Abstinencia total. El exfumador no puede permitirse ni un cigarrillo más. “La nicotina tienen un poder adictivo, como el de la cocaína, y hace que los receptores recuerden, despierten y necesiten más cigarros.\n \n 6) Ayuda farmacológica. El tratamiento farmacológico puede ayudar a dejar de fumar, aunque no está recomendado en jóvenes y embarazadas.</string>
    <string name="factorActividadFisica">Actividad Física</string>
    <string name="factorColesterol">Colesterol</string>
    <string name="colesterolInfo1">El colesterol es un tipo de grasa que se presenta de manera natural en nuestro cuerpo. En este sentido, nuestro organismo necesita una determinada cantidad de esta sustancia para funcionar de forma correcta, pero lo cierto es que no tener unos niveles de colesterol normales pueden ser perjudiciales y obstruir nuestras arterias. \n \n Nuestro hígado es el encargado de generar la mayor parte del colesterol. A este se le conoce como colesterol bueno o HDL y ayuda a eliminar el colesterol malo (LDL). Nuestra dieta tiene un papel importante en su aparición y debemos controlar sus índices para evitar que se obstruyan nuestras arterias y evitar enfermedades cardiovasculares. No obstante, la aparición del colesterol puede ser provocada por factores genéticos u otros trastornos, pero en la mayor parte de los casos, suele producirse por un estilo de vida poco saludable.</string>
    <string name="colesterolInfo2">Si queremos reducir nuestro colesterol, debemos hacer deporte y comer sano. Lo más recomendable es: \n \n 1)Reducir el consumo de grasas saturadas. La leche y sus derivados (queso, nata, mantequilla…). También debemos evitar embutidos o patés. \n \n 2)No consumir grasas trans, como patatas fritas o bollería industrial (comida basura). \n \n 3)Cuidado con los aceites. Muchos productos contienen aceites de palma o coco. El aceite de oliva es el mejor para su consumo ya que es una importante fuente de antioxidantes. \n \n 4)Mejor mantequilla que margarina. La margarina es de origen vegetal pero sus grasas trans son muy perjudiciales para nuestra salud coronaria. En este sentido, la mantequilla aporta grasas saturadas, pero es menos nociva para nuestro cuerpo. \n \n 5)Consumir antioxidantes. Los antioxidantes contrarrestan los efectos del colesterol y ayuda a que no se acumule en las arterias. Los frutos del bosque y algunas verduras también son beneficiosos. \n\n 6)Añadir productos con fibra a nuestra dieta. Esto nos ayudará a eliminar el colesterol malo en las deposiciones diarias. La avena, la cebada y las legumbres son alimentos ricos en esta sustancia. \n \n 7)Eliminar el consumo de tabaco. Este reduce nuestro colesterol bueno, indispensable para el correcto funcionamiento de nuestro cuerpo. La obesidad y un estilo de vida sedentario, también son factores claves en la aparición del colesterol. \n \n 8)Hacer ejercicio. Caminar, salir a correr, nadar u otro tipo de deporte aeróbico de manera regular aumenta el HDL y reduce el LDL. \n \n 9)Acudir al médico. Si a pesar de llevar un estilo de vida saludable y hacer ejercicio nuestro colesterol no se reduce, debemos hacernos unos análisis. Algunos fármacos ayudan a bajar el colesterol y los triglicéridos.</string>
    <string name="recomendacionesColesterol">Consejos</string>
    <string name="trucosActividadFisica">Trucos y Consejos</string>
    <string name="trucosTA">Controlar la Presión Arterial</string>
    <string name="factorTA">Presión Arterial</string>
    <string name="IMC">¿Qué es el IMC?</string>
    <string name="txtAutor2">Antonio Rubio Menchero</string>
    <string name="txtCorreo2">antonio.rubio5@alu.uclm.es</string>
    <string name="bib1">«Riesgo Cardiovascular. Evidencias que orientan la actuación clínica.» En: Sistema Sanitario de Navarra (2013).</string>
    <string name="bib2">Marino Tagle-Luzárraga y col. «Estimación del riesgo cardiovascular según el algoritmo de Framingham en sujetos con síndrome metabólico, definido por los criterios del NCEP-ATP-III». En: Endocrinología y Nutrición 54.4 (2007)</string>
</resources>