<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.InfoActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/rellayFramigham"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/headings">

                <TextView
                    android:id="@+id/txtFase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/framingham_risk_score"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayInfoFramigham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rellayFramigham">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txtFragmigham"
                        android:layout_gravity="center_vertical|end"/>
                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/definicionRiesgo"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"/>
                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/riesgoAlto"/>
                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/riesgoMedio"/>
                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/riesgoBajo"/>

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/riesgoInfo"/>
                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nota"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"/>
                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/notaFragm"/>


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayAutor"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/rellayInfoFramigham"
                android:background="@color/headings">

                <TextView
                    android:id="@+id/txtAutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/autores"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rellayInfoAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rellayAutor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtAutor"
                        android:textStyle="bold"
                        android:textSize="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCorreo"
                        android:textColor="@color/url" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtAutor2"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCorreo2"
                        android:textColor="@color/url" />

                    <com.codesgood.views.JustifiedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/infoAutor"/>

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:src="@drawable/uclm"
                        android:layout_marginBottom="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayBibliografia"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/rellayInfoAutor"
                android:background="@color/headings">

                <TextView
                    android:id="@+id/txtBibliografia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/bibliograf_a"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorAccent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rellayInfoBibliografia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rellayBibliografia">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bib1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/bib2" />




                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>