<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rellayRegistrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="40dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingRight="40dp"
    tools:context=".presentacion.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearInputRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/txtNombreRegistrar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/txtNombre"
                android:inputType="text"
                android:textSize="16sp"
                android:maxLines="1" />

            <EditText
                android:id="@+id/txtApellidoRegistrar"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/txtApellido"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp" />


        </LinearLayout>


        <EditText
            android:id="@+id/txtEmailRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtEmail"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/txtFechaNacimientoRegistrar"
            android:hint="@string/fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/genero"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/opciones_sexo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/radio_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/femenino" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />



        <EditText
            android:id="@+id/txtPassRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:maxLines="1"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/txtConfirmPassRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:maxLines="1"
            android:layout_centerHorizontal="true"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewRegistrar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:text="@string/txtRegistrar"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewLinkLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/text_member"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>