<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".presentacion.LoginActivity">

    <ImageView
        android:id="@+id/imageFondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/inicio"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="270dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_action_pass"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewEntrar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:onClick="oyente_btnEntrar"
                android:text="@string/txtEntrar"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>